Fix subtitles color on dark mode

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -54,7 +54,7 @@ footer {
     background: #2a2a2a;
   }
 
-  #subtitle {
+  #subtitle p {
     color: darkgray;
   }
 
